--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html {
 }
 
 #top-header {
-    background-color: #f8f9fa;
+    background-color: white;
     padding: 0;
     font-size: 1.2em;
     width: 100%;
@@ -54,9 +54,14 @@ html {
     padding: 10px;
     text-decoration: none;
     position: relative;
-    font-size: 0.8em; /* Adjust this value to make the text smaller */
-    white-space: nowrap; /* Prevent text from wrapping to the next line */
-    font-weight: normal; /* Make the font non-bold */
+    font-size: 0.8em;
+    white-space: nowrap;
+    font-weight: normal;
+    transition: background 0.3s ease-in-out; /* Add transition for color */
+}
+
+#navbar a:hover {
+    background: rgb(224, 224, 224); /* Change text color to dark gray on hover */
 }
 
 #navbar a::before {
